#24 JDK 9 support
- run jdk9 on CI (travis and Jenkins)
- refactor stages
- remove duplicate features in withMaven (junit, open tasks etc.)
- stop using clazz.newInstance() which is deprecated in JDK9